Fix arc img visible background color

--- a/src/index.scss
+++ b/src/index.scss
@@ -487,3 +487,7 @@ header.recruitment-notice {
     padding: 50px 16px;
   }
 }
+
+.arc-img {
+	margin: 10px 10px 0 10px;
+}
